--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -19,7 +19,7 @@
     display: flex;
 }
 
-@media screen and (min-aspect-ratio: 1 / 1) {
+@media screen and (min-aspect-ratio: 9 / 10 ) {
     #slider {
         flex-direction: column-reverse;
     }
